Tests can disable the execution of OPM maintenance tasks

To avoid postponed maintenance tasks form effecting Chrome unit tests
this change allows the scheduling and running of them to be disabled.

Bug: 822006
Change-Id: I042bdef8b450531d0e4699779691a3b8cc3e65f7
Reviewed-on: https://chromium-review.googlesource.com/965257
Commit-Queue: Yafei Duan <romax@chromium.org>
Reviewed-by: Yafei Duan <romax@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543621}
Former-commit-id: 76882bfb9870ca181c949ca88ae07a1aedd83c73